<resources>
    <string name="app_name">Bitsite_wallet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">No account yet? Create one</string>
    <string name="title_activity_register">Sign in</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="registerAccount">Register</string>
    <string name="user_name">Name</string>
    <string name="user_last_name">Last name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="tab_1">Home</string>
    <string name="tab_2">Receive/scan</string>
    <string name="tab_3">Send</string>
    <string name="tab_4">Settings</string>
    <string name="tab_5">Label 5</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="menu_3">Menu 3</string>
    <string name="menu_4">Menu 4</string>
    <string name="menu_5">Menu 5</string>
    <string name="nextSteps">Next steps</string>
    <string name="wallets">Wallets</string>
    <string name="likewallet">How do you like Bitsyte Wallet?</string>
    <string name="ready">You Bitsyte Wallet is ready!</string>
    <string name="youCanSee">On this screen you can see all you wallets, accounts, and assets</string>
    <string name="addressBoook">Adreess Book</string>
    <string name="help"><![CDATA[Help & Support]]></string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="shareBitsyde">Share Bitsyte Wallet</string>
    <string name="Preferents">Preferences</string>
    <string name="bcSupport">Bitcoin Cash Support</string>
    <string name="notificatios">Notifications</string>
    <string name="Languaje">Language</string>
    <string name="alternative">Alternative Currency</string>
    <string name="BitcontNetwork">Bitcoin Network Fee Policy</string>
    <string name="lookApp">Lock App</string>
    <string name="WalletsIntegr"><![CDATA[Wallets & Integrations]]></string>
    <string name="Avanced">Avanced</string>
    <string name="About">About Bitsyte Wallet</string>
    <string name="StartSend">Start sending bitcoins</string>
    <string name="togetStarted">To get started, buy bitcoins or share your address. You can receive bitcoin from any wallet or service</string>
    <string name="buyBitcoins">Buy Bitcoins</string>
    <string name="showAddress">Show bitcoins address</string>
</resources>
