<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/fragment_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView

                android:layout_marginBottom="40dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/biticon" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/StartSend"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:text="@string/togetStarted"
                android:textSize="18dp"
                 />
            <Button
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textColor="#fff"
                android:background="@color/colorBottomNavigationPrimary"
                android:text="@string/buyBitcoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/showAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </android.support.v7.widget.CardView>

</FrameLayout>