<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/addressBoook"
                            android:textSize="18dp"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/help"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/sendFeedback"
                            android:textSize="18dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/shareBitsyde"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <TextView
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Preferents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/bcSupport"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/notificatios"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/Languaje"
                            android:textSize="18dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/alternative"
                            android:textSize="18dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/BitcontNetwork"
                            android:textSize="18dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/lookApp"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <TextView
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/WalletsIntegr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="Wallet1"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/Avanced"
                            android:textSize="18dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:src="@drawable/ic_apps_black_24dp"
                            android:layout_weight="0.9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_weight="0.1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/About"
                            android:textSize="18dp"
                            />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>