<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/border"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:text="@string/likewallet"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:stepSize="0.1" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/palomita" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/ready"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:paddingBottom="20dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/youCanSee"
                        android:textAlignment="center"
                        android:textSize="14dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/border"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:text="@string/wallets"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/fragment_home_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/border"
                        android:paddingBottom="20dp"
                        android:paddingLeft="10dp"
                        android:text="@string/nextSteps"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/fragment_home_recycler_view2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>